Programmer: highlight connections for hovered widgets
#1517